Added Blok Videotestimonal

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -211,5 +211,17 @@
             "title": "إزالة بالمنظار الرحمي للزوائد اللحمية البطانية",
             "description": "إجراء بالمنظار الرحمي يعيد الخصوبة والأمل للمستقبل"
         }
+    },
+    "videoTestimonials": {
+        "title": "شهادات فيديو من مريضاتنا",
+        "afterOperation": {
+            "title": "بعد العملية أشعر بأنني بحالة ممتازة"
+        },
+        "whyChose": {
+            "title": "لماذا اخترت هذا الجراح بالذات"
+        },
+        "wantShare": {
+            "title": "الآن أنا بصحة جيدة وأريد مشاركة فرحي"
+        }
     }
 }
