--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -211,5 +211,17 @@
       "title": "הסרה היסטרוסקופית של פוליפ רירית הרחם",
       "description": "הליך היסטרוסקופי המחזיר פוריות ותקווה לעתיד"
     }
+  },
+  "videoTestimonials": {
+    "title": "עדויות וידאו מהמטופלות שלנו",
+    "afterOperation": {
+      "title": "אחרי הניתוח אני מרגישה נהדר"
+    },
+    "whyChose": {
+      "title": "למה בחרתי דווקא במנתח הזה"
+    },
+    "wantShare": {
+      "title": "עכשיו אני בריאה ורוצה לשתף את השמחה שלי"
+    }
   }
 }
