--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -227,5 +227,17 @@
             "title": "Гистероскопическое удаление эндометриального полипа",
             "description": "Гистероскопическая процедура, восстанавливающая фертильность и надежду на будущее"
         }
+    },
+    "videoTestimonials": {
+        "title": "Видеоотзывы от наших пациенток",
+        "afterOperation": {
+            "title": "После операции я чувствую себя отлично"
+        },
+        "whyChose": {
+            "title": "Почему я выбрала именно этого хирурга"
+        },
+        "wantShare": {
+            "title": "Теперь я здорова и хочу поделиться своей радостью"
+        }
     }
 }
