Change Media Type

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -146,7 +146,7 @@
             "massage": "التدليك",
             "course": "الدورات",
             "media": "وسائل الإعلام",
-            "stories": "القصص",
+            "story": "القصص",
             "bonus": "العروض"
         }
     },
