--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -146,7 +146,7 @@
       "massage": "Massage",
       "course": "Kurse",
       "media": "Medien",
-      "stories": "Geschichten",
+      "story": "Geschichten",
       "bonus": "Aktionen"
     }
   },
