--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -152,8 +152,8 @@
       "massage": "Massage",
       "course": "Courses",
       "media": "Media",
-      "stories": "Stories",
-      "bonus": "Promotions"
+      "story": "Stories",
+      "bonus": "Bonus"
     }
   },
   "footer": {
