--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -146,7 +146,7 @@
       "massage": "Masaje",
       "course": "Cursos",
       "media": "Medios",
-      "stories": "Historias",
+      "story": "Historias",
       "bonus": "Promociones"
     }
   },
