--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -146,7 +146,7 @@
       "massage": "Massage",
       "course": "Cours",
       "media": "Médias",
-      "stories": "Histoires",
+      "story": "Histoires",
       "bonus": "Promotions"
     }
   },
