--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -146,7 +146,7 @@
       "massage": "עיסוי",
       "course": "קורסים",
       "media": "מדיה",
-      "stories": "סיפורים",
+      "story": "סיפורים",
       "bonus": "מבצעים"
     }
   },
