--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -152,7 +152,7 @@
             "massage": "Массаж",
             "course": "Курсы",
             "media": "Медиа",
-            "stories": "Истории",
+            "story": "Истории",
             "bonus": "Акции"
         }
     },
