--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -97,13 +97,72 @@
         "readMore": "اقرأ المزيد",
         "learnMore": "اعرف المزيد",
         "contactUs": "اتصل بنا",
-        "bookAppointment": "حجز موعد"
+        "bookAppointment": "حجز موعد",
+        "book": "احجز"
     },
     "common": {
         "loading": "جاري التحميل...",
         "error": "خطأ",
         "success": "نجح",
         "language": "اللغة"
+    },
+    "contact": {
+        "title": "تواصل معنا اليوم",
+        "contactInfo": "معلومات الاتصال",
+        "getInTouch": "تواصل معنا",
+        "formTitle": "احجز استشارة بالطريقة المناسبة لك",
+        "formPromo": "عند الحجز عبر الإنترنت الآن — خصم 10٪، استشارة من 500 - 800 دولار + سونار مجاني",
+        "formDisclaimer": "المعلومات ليست عرضًا عامًا",
+        "name": "الاسم",
+        "firstName": "الاسم الأول",
+        "lastName": "اسم العائلة",
+        "phone": "الهاتف",
+        "email": "البريد الإلكتروني",
+        "message": "الرسالة",
+        "selectConsultation": "اختر نوع الاستشارة",
+        "inPersonConsultation": "استشارة شخصية مع د. تونيتسكي",
+        "onlineConsultation": "استشارة عبر الإنترنت",
+        "secondOpinion": "رأي ثانٍ",
+        "send": "إرسال",
+        "sending": "جارٍ الإرسال...",
+        "formSent": "شكراً لك! تم إرسال رسالتك. سنتصل بك قريباً.",
+        "formError": "خطأ في إرسال النموذج. حاول مرة أخرى.",
+        "validation": {
+            "nameRequired": "الاسم مطلوب",
+            "nameMin": "يجب أن يحتوي الاسم على حرفين على الأقل",
+            "phoneRequired": "الهاتف مطلوب",
+            "phoneInvalid": "تنسيق الهاتف غير صالح",
+            "emailRequired": "البريد الإلكتروني مطلوب",
+            "emailInvalid": "تنسيق البريد الإلكتروني غير صالح",
+            "consultationRequired": "اختر نوع الاستشارة",
+            "messageMax": "يجب ألا تتجاوز الرسالة 500 حرف"
+        },
+        "email": {
+            "adminSubject": "طلب استشارة جديد من",
+            "adminTitle": "طلب جديد",
+            "clinicName": "عيادة الدكتور سيرجي تونيتسكي",
+            "consultationType": "نوع الاستشارة",
+            "patientName": "اسم المريضة",
+            "sentTime": "تم إرسال الطلب",
+            "patientSubject": "تم استلام طلبك - عيادة الدكتور سيرجي تونيتسكي",
+            "thankYou": "شكراً لطلبك!",
+            "dear": "عزيزتي",
+            "requestReceived": "تم استلام طلبك بنجاح!",
+            "contactSoon": "سنتصل بك قريباً لتأكيد الموعد وتوضيح التفاصيل.",
+            "requestDetails": "تفاصيل طلبك:",
+            "whatNext": "ماذا بعد؟",
+            "step1": "سيتصل بك موظفنا خلال 24 ساعة",
+            "step2": "سنجد وقتاً مناسباً لاستشارتك",
+            "step3": "ستتلقين تأكيداً للموعد",
+            "clinicContacts": "معلومات الاتصال بالعيادة:",
+            "address": "العنوان",
+            "addressValue": "شارع إيلي لانداو 7، هرتسليا، إسرائيل",
+            "urgentQuestions": "إذا كانت لديك أسئلة عاجلة، يمكنك الاتصال بنا عبر الهاتف أو WhatsApp/Telegram.",
+            "autoMessage": "هذه رسالة تلقائية، يرجى عدم الرد عليها.",
+            "tagline": "أمراض النساء الحديثة وعلاج العقم",
+            "returnToSite": "العودة إلى الموقع",
+            "forContact": "للتواصل"
+        }
     },
     "info": {
         "contact": {
