--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -97,13 +97,72 @@
     "readMore": "Weiterlesen",
     "learnMore": "Mehr erfahren",
     "contactUs": "Kontaktieren Sie uns",
-    "bookAppointment": "Termin vereinbaren"
+    "bookAppointment": "Termin vereinbaren",
+    "book": "Buchen"
   },
   "common": {
     "loading": "Laden...",
     "error": "Fehler",
     "success": "Erfolg",
     "language": "Sprache"
+  },
+  "contact": {
+    "title": "Kontaktieren Sie uns heute",
+    "contactInfo": "Kontaktinformationen",
+    "getInTouch": "Kontaktieren Sie uns",
+    "formTitle": "Buchen Sie eine Beratung auf bequeme Weise",
+    "formPromo": "Bei Online-Buchung jetzt — 10% Rabatt, Beratung von 500 $ - 800 $ + kostenloser Ultraschall",
+    "formDisclaimer": "Die Informationen stellen kein öffentliches Angebot dar",
+    "name": "Name",
+    "firstName": "Vorname",
+    "lastName": "Nachname",
+    "phone": "Telefon",
+    "email": "E-Mail",
+    "message": "Nachricht",
+    "selectConsultation": "Beratungsart wählen",
+    "inPersonConsultation": "Persönliche Beratung mit Dr. Tunitski",
+    "onlineConsultation": "Online-Beratung",
+    "secondOpinion": "Zweite Meinung",
+    "send": "Senden",
+    "sending": "Wird gesendet...",
+    "formSent": "Vielen Dank! Ihre Nachricht wurde gesendet. Wir werden uns in Kürze bei Ihnen melden.",
+    "formError": "Fehler beim Senden des Formulars. Bitte versuchen Sie es erneut.",
+    "validation": {
+      "nameRequired": "Name ist erforderlich",
+      "nameMin": "Der Name muss mindestens 2 Zeichen lang sein",
+      "phoneRequired": "Telefon ist erforderlich",
+      "phoneInvalid": "Ungültiges Telefonformat",
+      "emailRequired": "E-Mail ist erforderlich",
+      "emailInvalid": "Ungültiges E-Mail-Format",
+      "consultationRequired": "Bitte wählen Sie die Beratungsart",
+      "messageMax": "Die Nachricht darf 500 Zeichen nicht überschreiten"
+    },
+    "email": {
+      "adminSubject": "Neue Beratungsanfrage von",
+      "adminTitle": "NEUE ANFRAGE",
+      "clinicName": "Klinik Dr. Serge Tunitski",
+      "consultationType": "Beratungstyp",
+      "patientName": "Name der Patientin",
+      "sentTime": "Anfrage gesendet",
+      "patientSubject": "Ihre Anfrage wurde erhalten - Klinik Dr. Serge Tunitski",
+      "thankYou": "Vielen Dank für Ihre Anfrage!",
+      "dear": "Sehr geehrte",
+      "requestReceived": "Ihre Anfrage wurde erfolgreich erhalten!",
+      "contactSoon": "Wir werden uns in Kürze mit Ihnen in Verbindung setzen, um den Termin zu bestätigen und Details zu klären.",
+      "requestDetails": "Details Ihrer Anfrage:",
+      "whatNext": "Was kommt als Nächstes?",
+      "step1": "Unser Administrator wird Sie innerhalb von 24 Stunden kontaktieren",
+      "step2": "Wir finden einen passenden Termin für Ihre Beratung",
+      "step3": "Sie erhalten eine Terminbestätigung",
+      "clinicContacts": "Kontaktinformationen der Klinik:",
+      "address": "Adresse",
+      "addressValue": "Eli Landau Str. 7, Herzliya, Israel",
+      "urgentQuestions": "Bei dringenden Fragen können Sie uns telefonisch oder über WhatsApp/Telegram kontaktieren.",
+      "autoMessage": "Dies ist eine automatische E-Mail, bitte antworten Sie nicht darauf.",
+      "tagline": "Moderne Gynäkologie und Unfruchtbarkeitsbehandlung",
+      "returnToSite": "Zurück zur Website",
+      "forContact": "zur Kontaktaufnahme"
+    }
   },
   "info": {
     "contact": {
