--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -97,13 +97,72 @@
     "readMore": "Leer más",
     "learnMore": "Saber más",
     "contactUs": "Contáctanos",
-    "bookAppointment": "Reservar cita"
+    "bookAppointment": "Reservar cita",
+    "book": "Reservar"
   },
   "common": {
     "loading": "Cargando...",
     "error": "Error",
     "success": "Éxito",
     "language": "Idioma"
+  },
+  "contact": {
+    "title": "Contáctenos hoy",
+    "contactInfo": "Información de contacto",
+    "getInTouch": "Póngase en contacto",
+    "formTitle": "Reserve una consulta de manera conveniente",
+    "formPromo": "Al reservar en línea ahora mismo — 10% de descuento, consulta desde $500 - $800 + ecografía gratis",
+    "formDisclaimer": "La información no constituye una oferta pública",
+    "name": "Nombre",
+    "firstName": "Nombre",
+    "lastName": "Apellido",
+    "phone": "Teléfono",
+    "email": "Correo electrónico",
+    "message": "Mensaje",
+    "selectConsultation": "Seleccione tipo de consulta",
+    "inPersonConsultation": "Consulta presencial con Dr. Tunitski",
+    "onlineConsultation": "Consulta en línea",
+    "secondOpinion": "Segunda opinión",
+    "send": "Enviar",
+    "sending": "Enviando...",
+    "formSent": "¡Gracias! Su mensaje ha sido enviado. Nos pondremos en contacto con usted pronto.",
+    "formError": "Error al enviar el formulario. Por favor, inténtelo de nuevo.",
+    "validation": {
+      "nameRequired": "El nombre es obligatorio",
+      "nameMin": "El nombre debe tener al menos 2 caracteres",
+      "phoneRequired": "El teléfono es obligatorio",
+      "phoneInvalid": "Formato de teléfono inválido",
+      "emailRequired": "El correo electrónico es obligatorio",
+      "emailInvalid": "Formato de correo electrónico inválido",
+      "consultationRequired": "Seleccione el tipo de consulta",
+      "messageMax": "El mensaje no debe exceder los 500 caracteres"
+    },
+    "email": {
+      "adminSubject": "Nueva solicitud de consulta de",
+      "adminTitle": "NUEVA SOLICITUD",
+      "clinicName": "Clínica Dr. Serge Tunitski",
+      "consultationType": "Tipo de consulta",
+      "patientName": "Nombre de la paciente",
+      "sentTime": "Solicitud enviada",
+      "patientSubject": "Su solicitud ha sido recibida - Clínica Dr. Serge Tunitski",
+      "thankYou": "¡Gracias por su solicitud!",
+      "dear": "Estimada",
+      "requestReceived": "¡Su solicitud ha sido recibida con éxito!",
+      "contactSoon": "Nos pondremos en contacto con usted en breve para confirmar la cita y aclarar los detalles.",
+      "requestDetails": "Detalles de su solicitud:",
+      "whatNext": "¿Qué sigue?",
+      "step1": "Nuestro administrador se pondrá en contacto con usted dentro de 24 horas",
+      "step2": "Encontraremos un momento conveniente para su consulta",
+      "step3": "Recibirá una confirmación de la cita",
+      "clinicContacts": "Información de contacto de la clínica:",
+      "address": "Dirección",
+      "addressValue": "Calle Eli Landau 7, Herzliya, Israel",
+      "urgentQuestions": "Si tiene preguntas urgentes, puede contactarnos por teléfono o vía WhatsApp/Telegram.",
+      "autoMessage": "Este es un correo electrónico automático, por favor no responda.",
+      "tagline": "Ginecología moderna y tratamiento de infertilidad",
+      "returnToSite": "Volver al sitio",
+      "forContact": "para contacto"
+    }
   },
   "info": {
     "contact": {
