--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -97,13 +97,72 @@
     "readMore": "Lire la suite",
     "learnMore": "En savoir plus",
     "contactUs": "Contactez-nous",
-    "bookAppointment": "Prendre rendez-vous"
+    "bookAppointment": "Prendre rendez-vous",
+    "book": "Réserver"
   },
   "common": {
     "loading": "Chargement...",
     "error": "Erreur",
     "success": "Succès",
     "language": "Langue"
+  },
+  "contact": {
+    "title": "Contactez-nous aujourd'hui",
+    "contactInfo": "Coordonnées",
+    "getInTouch": "Contactez-nous",
+    "formTitle": "Prenez rendez-vous de manière pratique",
+    "formPromo": "En réservant en ligne maintenant — 10% de réduction, consultation de 500 $ - 800 $ + échographie gratuite",
+    "formDisclaimer": "L'information ne constitue pas une offre publique",
+    "name": "Nom",
+    "firstName": "Prénom",
+    "lastName": "Nom de famille",
+    "phone": "Téléphone",
+    "email": "E-mail",
+    "message": "Message",
+    "selectConsultation": "Sélectionnez le type de consultation",
+    "inPersonConsultation": "Consultation en personne avec Dr. Tunitski",
+    "onlineConsultation": "Consultation en ligne",
+    "secondOpinion": "Deuxième avis",
+    "send": "Envoyer",
+    "sending": "Envoi en cours...",
+    "formSent": "Merci! Votre message a été envoyé. Nous vous contacterons bientôt.",
+    "formError": "Erreur lors de l'envoi du formulaire. Veuillez réessayer.",
+    "validation": {
+      "nameRequired": "Le nom est obligatoire",
+      "nameMin": "Le nom doit contenir au moins 2 caractères",
+      "phoneRequired": "Le téléphone est obligatoire",
+      "phoneInvalid": "Format de téléphone invalide",
+      "emailRequired": "L'e-mail est obligatoire",
+      "emailInvalid": "Format d'e-mail invalide",
+      "consultationRequired": "Veuillez sélectionner le type de consultation",
+      "messageMax": "Le message ne doit pas dépasser 500 caractères"
+    },
+    "email": {
+      "adminSubject": "Nouvelle demande de consultation de",
+      "adminTitle": "NOUVELLE DEMANDE",
+      "clinicName": "Clinique Dr. Serge Tunitski",
+      "consultationType": "Type de consultation",
+      "patientName": "Nom de la patiente",
+      "sentTime": "Demande envoyée",
+      "patientSubject": "Votre demande a été reçue - Clinique Dr. Serge Tunitski",
+      "thankYou": "Merci pour votre demande!",
+      "dear": "Chère",
+      "requestReceived": "Votre demande a été reçue avec succès!",
+      "contactSoon": "Nous vous contacterons sous peu pour confirmer le rendez-vous et clarifier les détails.",
+      "requestDetails": "Détails de votre demande:",
+      "whatNext": "Et maintenant?",
+      "step1": "Notre administrateur vous contactera dans les 24 heures",
+      "step2": "Nous trouverons un moment convenable pour votre consultation",
+      "step3": "Vous recevrez une confirmation de rendez-vous",
+      "clinicContacts": "Informations de contact de la clinique:",
+      "address": "Adresse",
+      "addressValue": "7 rue Eli Landau, Herzliya, Israël",
+      "urgentQuestions": "Si vous avez des questions urgentes, vous pouvez nous contacter par téléphone ou via WhatsApp/Telegram.",
+      "autoMessage": "Ceci est un e-mail automatique, veuillez ne pas y répondre.",
+      "tagline": "Gynécologie moderne et traitement de l'infertilité",
+      "returnToSite": "Retour au site",
+      "forContact": "pour contact"
+    }
   },
   "info": {
     "contact": {
