--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -97,13 +97,72 @@
     "readMore": "קרא עוד",
     "learnMore": "למד עוד",
     "contactUs": "צור קשר",
-    "bookAppointment": "קבע תור"
+    "bookAppointment": "קבע תור",
+    "book": "הזמן"
   },
   "common": {
     "loading": "טוען...",
     "error": "שגיאה",
     "success": "הצלחה",
     "language": "שפה"
+  },
+  "contact": {
+    "title": "צור קשר עוד היום",
+    "contactInfo": "פרטי קשר",
+    "getInTouch": "צור קשר",
+    "formTitle": "קבע ייעוץ בדרך הנוחה לך",
+    "formPromo": "בהזמנה מקוונת כעת — הנחה של 10%, ייעוץ מ-500$ - 800$ + אולטרסאונד חינם",
+    "formDisclaimer": "המידע אינו מהווה הצעה ציבורית",
+    "name": "שם",
+    "firstName": "שם פרטי",
+    "lastName": "שם משפחה",
+    "phone": "טלפון",
+    "email": "אימייל",
+    "message": "הודעה",
+    "selectConsultation": "בחר סוג ייעוץ",
+    "inPersonConsultation": "ייעוץ פנים אל פנים עם ד\"ר טוניצקי",
+    "onlineConsultation": "ייעוץ מקוון",
+    "secondOpinion": "חוות דעת שנייה",
+    "send": "שלח",
+    "sending": "שולח...",
+    "formSent": "תודה! הודעתך נשלחה. ניצור איתך קשר בקרוב.",
+    "formError": "שגיאה בשליחת הטופס. נסה שוב.",
+    "validation": {
+      "nameRequired": "שם הוא שדה חובה",
+      "nameMin": "השם חייב להכיל לפחות 2 תווים",
+      "phoneRequired": "טלפון הוא שדה חובה",
+      "phoneInvalid": "פורמט טלפון לא חוקי",
+      "emailRequired": "אימייל הוא שדה חובה",
+      "emailInvalid": "פורמט אימייל לא חוקי",
+      "consultationRequired": "בחר סוג ייעוץ",
+      "messageMax": "ההודעה לא יכולה לעבור 500 תווים"
+    },
+    "email": {
+      "adminSubject": "בקשה חדשה לייעוץ מ",
+      "adminTitle": "בקשה חדשה",
+      "clinicName": "מרפאת ד\"ר סרגיי טוניצקי",
+      "consultationType": "סוג הייעוץ",
+      "patientName": "שם המטופלת",
+      "sentTime": "הבקשה נשלחה",
+      "patientSubject": "בקשתך התקבלה - מרפאת ד\"ר סרגיי טוניצקי",
+      "thankYou": "תודה על הבקשה שלך!",
+      "dear": "יקרה",
+      "requestReceived": "הבקשה שלך התקבלה בהצלחה!",
+      "contactSoon": "ניצור איתך קשר בקרוב כדי לאשר את הפגישה ולהבהיר פרטים.",
+      "requestDetails": "פרטי הבקשה שלך:",
+      "whatNext": "מה קורה עכשיו?",
+      "step1": "המנהלת שלנו תיצור איתך קשר תוך 24 שעות",
+      "step2": "נמצא זמן נוח עבורך לייעוץ",
+      "step3": "תקבלי אישור פגישה",
+      "clinicContacts": "פרטי התקשרות של המרפאה:",
+      "address": "כתובת",
+      "addressValue": "רח' אלי לנדאו 7, הרצליה, ישראל",
+      "urgentQuestions": "אם יש לך שאלות דחופות, אתה יכול ליצור איתנו קשר בטלפון או דרך WhatsApp/Telegram.",
+      "autoMessage": "זה מייל אוטומטי, אנא אל תענה לו.",
+      "tagline": "גינקולוגיה מודרנית וטיפול בעקרות",
+      "returnToSite": "חזרה לאתר",
+      "forContact": "ליצירת קשר"
+    }
   },
   "info": {
     "contact": {
