--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -97,7 +97,8 @@
         "readMore": "Читать далее",
         "learnMore": "Узнать больше",
         "contactUs": "Связаться с нами",
-        "bookAppointment": "Записаться на прием"
+        "bookAppointment": "Записаться на прием",
+        "book": "Записаться"
     },
     "common": {
         "loading": "Загрузка...",
@@ -109,6 +110,64 @@
         "languageDetection": {
             "title": "Мы определили ваши языковые предпочтения",
             "message": "Мы заметили, что вы, возможно, предпочитаете просматривать этот сайт на {{language}} вместо {{currentLanguage}}. Хотите переключиться?"
+        }
+    },
+    "contact": {
+        "title": "Свяжитесь с нами сегодня",
+        "contactInfo": "Контактная информация",
+        "getInTouch": "Свяжитесь с нами",
+        "formTitle": "Запишитесь на консультацию удобным способом",
+        "formPromo": "При записи онлайн прямо сейчас — скидка 10%, консультация от 500 - 800 $ + УЗИ бесплатно",
+        "formDisclaimer": "Информация не является публичной офертой",
+        "name": "Имя",
+        "firstName": "Имя",
+        "lastName": "Фамилия",
+        "phone": "Телефон",
+        "email": "Email",
+        "message": "Сообщение",
+        "selectConsultation": "Выберите тип консультации",
+        "inPersonConsultation": "Очная консультация с доктором Тунитским",
+        "onlineConsultation": "Онлайн-консультация",
+        "secondOpinion": "Второе мнение специалиста",
+        "send": "Отправить",
+        "sending": "Отправка...",
+        "formSent": "Спасибо! Ваше сообщение отправлено. Мы свяжемся с вами в ближайшее время.",
+        "formError": "Ошибка отправки формы. Попробуйте еще раз.",
+        "validation": {
+            "nameRequired": "Имя обязательно",
+            "nameMin": "Имя должно содержать минимум 2 символа",
+            "phoneRequired": "Телефон обязателен",
+            "phoneInvalid": "Неверный формат телефона",
+            "emailRequired": "Email обязателен",
+            "emailInvalid": "Неверный формат email",
+            "consultationRequired": "Выберите тип консультации",
+            "messageMax": "Сообщение не должно превышать 500 символов"
+        },
+        "email": {
+            "adminSubject": "Новая заявка на консультацию от",
+            "adminTitle": "НОВАЯ ЗАЯВКА",
+            "clinicName": "Клиника Dr. Serge Tunitski",
+            "consultationType": "Тип консультации",
+            "patientName": "Имя пациента",
+            "sentTime": "Заявка отправлена",
+            "patientSubject": "Ваша заявка принята - Клиника Dr. Serge Tunitski",
+            "thankYou": "Спасибо за вашу заявку!",
+            "dear": "Уважаемый(ая)",
+            "requestReceived": "Ваша заявка успешно получена!",
+            "contactSoon": "Мы свяжемся с вами в ближайшее время для подтверждения записи и уточнения деталей.",
+            "requestDetails": "Детали вашей заявки:",
+            "whatNext": "Что дальше?",
+            "step1": "Наш администратор свяжется с вами в течение 24 часов",
+            "step2": "Мы подберем удобное для вас время консультации",
+            "step3": "Вы получите подтверждение записи",
+            "clinicContacts": "Контактная информация клиники:",
+            "address": "Адрес",
+            "addressValue": "ул. Эли Ландау 7, Герцлия, Израиль",
+            "urgentQuestions": "Если у вас возникли срочные вопросы, вы можете связаться с нами по телефону или через WhatsApp/Telegram.",
+            "autoMessage": "Это автоматическое письмо, пожалуйста, не отвечайте на него.",
+            "tagline": "Современная гинекология и лечение бесплодия",
+            "returnToSite": "Вернуться на сайт",
+            "forContact": "для связи"
         }
     },
     "info": {
