--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -143,6 +143,8 @@
             "consultationRequired": "Выберите тип консультации",
             "messageMax": "Сообщение не должно превышать 500 символов"
         },
+        "recaptchaNotReady": "Загружается проверка безопасности. Пожалуйста, подождите...",
+        "recaptchaNotice": "Этот сайт защищен reCAPTCHA, применяются Политика конфиденциальности и Условия использования Google.",
         "email": {
             "adminSubject": "Новая заявка на консультацию от",
             "adminTitle": "НОВАЯ ЗАЯВКА",
