--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -137,6 +137,8 @@
       "consultationRequired": "Bitte wählen Sie die Beratungsart",
       "messageMax": "Die Nachricht darf 500 Zeichen nicht überschreiten"
     },
+    "recaptchaNotReady": "Sicherheitsüberprüfung wird geladen. Bitte warten...",
+    "recaptchaNotice": "Diese Website ist durch reCAPTCHA geschützt und es gelten die Datenschutzbestimmungen und Nutzungsbedingungen von Google.",
     "email": {
       "adminSubject": "Neue Beratungsanfrage von",
       "adminTitle": "NEUE ANFRAGE",
