--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -143,6 +143,8 @@
       "consultationRequired": "Please select consultation type",
       "messageMax": "Message must not exceed 500 characters"
     },
+    "recaptchaNotReady": "Security check is loading. Please wait...",
+    "recaptchaNotice": "This site is protected by reCAPTCHA and the Google Privacy Policy and Terms of Service apply.",
     "email": {
       "adminSubject": "New consultation request from",
       "adminTitle": "NEW REQUEST",
