Added type Gynecology

--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -204,7 +204,7 @@
         "breadcrumbs": {
             "main": "الرئيسية",
             "about": "حول",
-            "massage": "التدليك",
+            "gynecology": "أمراض النساء",
             "course": "الدورات",
             "media": "وسائل الإعلام",
             "story": "القصص",
