--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -204,7 +204,7 @@
     "breadcrumbs": {
       "main": "Startseite",
       "about": "Über uns",
-      "massage": "Massage",
+      "gynecology": "Gynäkologie",
       "course": "Kurse",
       "media": "Medien",
       "story": "Geschichten",
