--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -210,7 +210,7 @@
     "breadcrumbs": {
       "main": "Home",
       "about": "About",
-      "massage": "Massage",
+      "gynecology": "Gynecology",
       "course": "Courses",
       "media": "Media",
       "story": "Stories",
