--- a/public/locales/es/common.json
+++ b/public/locales/es/common.json
@@ -204,7 +204,7 @@
     "breadcrumbs": {
       "main": "Inicio",
       "about": "Acerca de",
-      "massage": "Masaje",
+      "gynecology": "Ginecología",
       "course": "Cursos",
       "media": "Medios",
       "story": "Historias",
