--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -204,7 +204,7 @@
     "breadcrumbs": {
       "main": "Accueil",
       "about": "À propos",
-      "massage": "Massage",
+      "gynecology": "Gynécologie",
       "course": "Cours",
       "media": "Médias",
       "story": "Histoires",
