--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -204,7 +204,7 @@
     "breadcrumbs": {
       "main": "בית",
       "about": "אודות",
-      "massage": "עיסוי",
+      "gynecology": "גינקולוגיה",
       "course": "קורסים",
       "media": "מדיה",
       "story": "סיפורים",
