--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -210,7 +210,7 @@
         "breadcrumbs": {
             "main": "Главная",
             "about": "О нас",
-            "massage": "Массаж",
+            "gynecology": "Гинекология",
             "course": "Курсы",
             "media": "Медиа",
             "story": "Истории",
