--- a/public/locales/fr/common.json
+++ b/public/locales/fr/common.json
@@ -284,5 +284,15 @@
     "wantShare": {
       "title": "Maintenant je suis en bonne santé et je veux partager ma joie"
     }
+  },
+  "mediaBlog": {
+    "title": "Blog de la Clinique du Docteur Serge Tunitski: Actualités, Articles d'Experts, Témoignages Vidéo et Réponses aux Questions",
+    "seoTitle": "Blog Média - Clinique du Dr. Serge Tunitski",
+    "seoDescription": "Parcourez notre collection complète d'actualités, d'articles d'experts, de témoignages vidéo et de réponses aux questions fréquemment posées sur la chirurgie gynécologique et les traitements.",
+    "noPosts": "Aucune publication disponible pour le moment."
+  },
+  "pagination": {
+    "prev": "Précédent",
+    "next": "Suivant"
   }
 }
