--- a/public/locales/he/common.json
+++ b/public/locales/he/common.json
@@ -284,5 +284,15 @@
     "wantShare": {
       "title": "עכשיו אני בריאה ורוצה לשתף את השמחה שלי"
     }
+  },
+  "mediaBlog": {
+    "title": "בלוג המרפאה של ד״ר סרגיי טוניצקי: חדשות, מאמרים מקצועיים, המלצות וידאו ותשובות לשאלות",
+    "seoTitle": "בלוג מדיה - מרפאת ד״ר סרגיי טוניצקי",
+    "seoDescription": "עיין באוסף המקיף שלנו של חדשות, מאמרים מקצועיים, המלצות וידאו ותשובות לשאלות נפוצות על ניתוחים וטיפולים גינקולוגיים.",
+    "noPosts": "אין פוסטים זמינים כרגע."
+  },
+  "pagination": {
+    "prev": "הקודם",
+    "next": "הבא"
   }
 }
