--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -300,5 +300,15 @@
         "wantShare": {
             "title": "Теперь я здорова и хочу поделиться своей радостью"
         }
+    },
+    "mediaBlog": {
+        "title": "Блог клиники Doctor Serge Tunitski: Новости, Экспертные статьи, Видео Отзывы и Ответы на вопросы",
+        "seoTitle": "Медиа Блог - Клиника Доктора Сергея Туницкого",
+        "seoDescription": "Просмотрите нашу полную коллекцию новостей, экспертных статей, видео отзывов и ответов на часто задаваемые вопросы о гинекологических операциях и лечении.",
+        "noPosts": "На данный момент постов нет."
+    },
+    "pagination": {
+        "prev": "Предыдущая",
+        "next": "Следующая"
     }
 }
