--- a/public/locales/ar/common.json
+++ b/public/locales/ar/common.json
@@ -284,5 +284,15 @@
         "wantShare": {
             "title": "الآن أنا بصحة جيدة وأريد مشاركة فرحي"
         }
+    },
+    "mediaBlog": {
+        "title": "مدونة عيادة الدكتور سيرج تونيتسكي: أخبار، مقالات خبراء، شهادات فيديو، وإجابات على الأسئلة",
+        "seoTitle": "مدونة الوسائط - عيادة الدكتور سيرج تونيتسكي",
+        "seoDescription": "تصفح مجموعتنا الشاملة من الأخبار والمقالات الخبيرة وشهادات الفيديو والإجابات على الأسئلة المتداولة حول الجراحة والعلاجات النسائية.",
+        "noPosts": "لا توجد منشورات متاحة في الوقت الحالي."
+    },
+    "pagination": {
+        "prev": "السابق",
+        "next": "التالي"
     }
 }
