--- a/public/locales/de/common.json
+++ b/public/locales/de/common.json
@@ -284,5 +284,15 @@
     "wantShare": {
       "title": "Jetzt bin ich gesund und möchte meine Freude teilen"
     }
+  },
+  "mediaBlog": {
+    "title": "Blog der Klinik von Dr. Serge Tunitski: Nachrichten, Expertenbeiträge, Video-Bewertungen und Antworten auf Fragen",
+    "seoTitle": "Medienblog - Klinik von Dr. Serge Tunitski",
+    "seoDescription": "Durchsuchen Sie unsere umfassende Sammlung von Nachrichten, Expertenbeiträgen, Video-Bewertungen und Antworten auf häufig gestellte Fragen zu gynäkologischen Operationen und Behandlungen.",
+    "noPosts": "Derzeit sind keine Beiträge verfügbar."
+  },
+  "pagination": {
+    "prev": "Zurück",
+    "next": "Weiter"
   }
 }
